# Simulador

./: CMakeLists.txt  Sim0.kdev4  cronometro.cpp  encabezados.h  escribano.cpp  escribano.h  main.cpp  objetos.h  relojAplicacion.h  simulacion.cpp  simulacion.h  simulador.cpp  simulador.h  tecnico.cpp  tecnico.h
.kdev4/: Sim0.kdev4
escriba/: cronometro.cpp  cronometro.h  escriba.cpp  escriba.h
escriba/herramientas/: encabezados.h  relojAplicacion.cpp  relojAplicacion.h
herramientas/: cronometro.cpp  cronometro.h  encabezados.h  escriba.cpp  escriba.h  escribano.cpp  relojAplicacion.h
paladin/: paladin.cpp  paladin.h
paladin/herramientas/: relojPaladin.cpp  relojPaladin.h
simulacion/: simulacion.h
simulacion/herramientas/: relojSimulacion.cpp  relojSimulacion.h
tecnico/: tecnico.cpp  tecnico.h
